--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     restart: always
 
   api:
-    image: dahln/glubfish:glubfish_api.18.8.1
+    image: damnstack/damnstack:damnstack_api.18.9.1
     links:
       - db
     restart: always
 
   nginx:
-    image: dahln/glubfish:glubfish_nginx.18.8.1
+    image: damnstack/damnstack:damnstack_nginx.18.9.1
     links:
       - api
     ports:
