--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     restart: always
 
   api:
-    image: damnstack/damnstack:damnstack_api.18.9.1
+    image: damnstack/stack:stack_api.18.9.4
     links:
       - db
     restart: always
 
   nginx:
-    image: damnstack/damnstack:damnstack_nginx.18.9.1
+    image: damnstack/stack:stack_nginx.18.9.4
     links:
       - api
     ports:
