Fixed 4.0.0 image path.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     restart: always
 
   app:
-    image: damnstack/stack:stack_app:4.0.0
+    image: damnstack/stack:stack_app.4.0.0
     links:
       - db
     restart: always
