--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,16 @@ services:
       - /home/dahln/data/db:/data/db
     restart: always
 
-  app:
-    image: damnstack/stack:stack_app.4.2.1
+  api:
+    image: dahln/damn:damn_api.5.0.0
     links:
       - db
     restart: always
 
   nginx:
-    image: damnstack/stack:stack_nginx.4.2.1
+    image: dahln/damn:damn_proxy.5.0.0
     links:
-      - app
+      - api
     ports:
       - "80:80"
       - "443:443"
