--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     restart: always
 
   api:
-    image: dahln/damn:damn_api.5.0.0
+    image: dahln/damn-deploy:damn_api.5.0.0
     links:
       - db
     restart: always
 
   nginx:
-    image: dahln/damn:damn_proxy.5.0.0
+    image: dahln/damn-deploy:damn_proxy.5.0.0
     links:
       - api
     ports:
